# EC2-monitor-agent

./: .gitignore  README.md  architecture.mmd  aws_agent_app.py  aws_agent_cli.py  aws_agent_gradio.py  aws_agent_history.json  pyproject.toml
.devcontainer/: devcontainer.json
